Fixed UI alignments

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -52,15 +52,15 @@ body {
 
 .container {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   font-size: 20px;
 }
 
-.container img {
-  margin-right: 5px;
-  width: 50px;
-  height: 60px;
-}
+// .container img {
+//   margin-right: 5px;
+//   width: 50px;
+//   height: 60px;
+// }
 
 .container div {
   display: inline-block;
@@ -98,10 +98,22 @@ body {
 
     & h1{
       font-size: 3rem;
+    font-weight: 500;
     line-height: 3.75rem;
     }
     & p{
       font-size: 1.25rem;
     line-height: 1.875rem;
     }
+}
+
+.working-with-us{
+  margin-top: 5rem;
+  text-align: center;
+
+  & h1{
+  font-weight: 500;
+    font-size: 3rem;
+  line-height: 3.75rem;
+  }
 }
